DeveloperOrg/force-app/main/default/objects/Service_Schedule__c/Service_Schedule__c.object-meta.xml
<CustomObject>
    <label>Service Schedule</label>
    <nameField>
        <label>Service Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>