DeveloperOrg/force-app/main/default/objects/Service_Schedule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Service Schedule</relationshipLabel>
    <relationshipName>Service_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>