DeveloperOrg/force-app/main/default/objects/Service_Schedule__c/fields/SLA_Duration__c.field-meta.xml
<CustomField>
    <fullName>SLA_Duration__c</fullName>
    <label>SLA Duration</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>