DeveloperOrg/force-app/main/default/objects/Service_Schedule__c/validationRules/Service_Start_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Start_Date_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Service_Start_Date__c )</errorConditionFormula>
    <errorMessage>Service_Start_Date</errorMessage>
</ValidationRule>